syntax="proto3";

package sum;

option go_package = "github.com/mathitz/study/golang/grpc-class/sum/proto";

message SumRequest {
  int32 numberOne = 1;
  int32 numberTwo = 2;
}

message SumResponse {
  int32 result = 1;
}

service SumService {
  rpc Sum (SumRequest) returns (SumResponse);
}
